--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -13,6 +13,8 @@ body, html {
 a {
   color: aquamarine;
   font-size: 16px;
+  padding: 20px;
+  margin: 20px;
 }
 
 h2 {
@@ -26,4 +28,11 @@ p {
   font-family: verdana;
   font-size: 21px;
   color: grey;
+}
+
+footer {
+  font-family: verdana;
+  font-size: 14px;
+  color: grey;
+  text-align: right;
 }
